--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/index.css">
     <title>Notes</title>
 </head>
 <body>
     <h1>Notes App</h1>
     <div class="note-col">
-
+        <div class="notes"></div>
     </div>
     <div class="controls-col">
     </div>
+    <script src="./js/app.js"></script>
 </body>
 </html>
